# dyn_path

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  TESTING.md  makefile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/workflows/: overall-coverage.yml  publish.yml
src/: lib.rs  test.rs
